// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feedback Basic renders as expected 1`] = `
<div
  className="dr-ui--feedback"
>
  <div>
    <h2
      className="unprose txt-m txt-bold mb6"
    >
      Was this 
      page
       helpful?
    </h2>
    <button
      className="btn btn--s"
      id="dr-ui--feedback-lnglat-yes"
      onClick={[Function]}
    >
      Yes
    </button>
    <button
      className="btn btn--s ml6"
      id="dr-ui--feedback-lnglat-no"
      onClick={[Function]}
    >
      No
    </button>
  </div>
</div>
`;

exports[`feedback Change type renders as expected 1`] = `
<div
  className="dr-ui--feedback"
>
  <div>
    <h2
      className="unprose txt-m txt-bold mb6"
    >
      Was this 
      section
       helpful?
    </h2>
    <button
      className="btn btn--s"
      id="dr-ui--feedback-page-yes"
      onClick={[Function]}
    >
      Yes
    </button>
    <button
      className="btn btn--s ml6"
      id="dr-ui--feedback-page-no"
      onClick={[Function]}
    >
      No
    </button>
  </div>
</div>
`;
